--- a/.github/workflows/pipelineMartes2025.yml
+++ b/.github/workflows/pipelineMartes2025.yml
@@ -3,11 +3,10 @@ name: CI-CD SimpleWebAPI Martes
 on:
   push:
     branches: [ "main" ]
-  
+
 env:
   BUILD_CONFIGURATION: Release
   PROJECT_PATH: SimpleWebAPI/SimpleWebAPI.csproj
-  NUGET_PACKAGES: ~/.nuget/packages
   WEBAPP_QA: ClimaCordoba-QA         # <- tu WebApp QA
   WEBAPP_PROD: ClimaCordoba-Prod     # <- tu WebApp Prod (ajustá el nombre)
 
@@ -25,6 +24,7 @@ jobs:
       - name: Cache NuGet
         uses: actions/cache@v4
         with:
+          # cacheamos la ruta por defecto que usa dotnet (/home/runner/.nuget/packages)
           path: ~/.nuget/packages
           key: nuget-${{ runner.os }}-${{ hashFiles('**/packages.lock.json','**/*.csproj') }}
           restore-keys: |
@@ -54,7 +54,7 @@ jobs:
   deploy_qa:
     runs-on: ubuntu-latest
     needs: build
-    environment: QA             # configurá approvals en Settings → Environments
+    environment: QA
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v4
@@ -66,8 +66,5 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: ${{ env.WEBAPP_QA }}
-          # slot-name: 'qa'                 # descomentá si usás slot en QA
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_QA }}
           package: ./artifact/site.zip
-
-  
