--- a/.github/workflows/pipelineMartes2025.yml
+++ b/.github/workflows/pipelineMartes2025.yml
@@ -7,8 +7,7 @@ on:
 env:
   BUILD_CONFIGURATION: Release
   PROJECT_PATH: SimpleWebAPI/SimpleWebAPI.csproj
-  WEBAPP_QA: ClimaCordoba-GITHUB         # <- tu WebApp QA
-  WEBAPP_PROD: ClimaCordoba-Prod     # <- tu WebApp Prod (ajustá el nombre)
+  WEBAPP_QA: Clima2025v-github         # <- tu WebApp QA
 
 jobs:
   build:
@@ -66,5 +65,5 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: ${{ env.WEBAPP_QA }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_QA }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_QA_VIERNES }}
           package: ./artifact/site.zip
